fix: pre tag overflow in iOS

--- a/styles/Dialog.module.scss
+++ b/styles/Dialog.module.scss
@@ -7,6 +7,9 @@
   left: 50%;
   max-height: 100vh;
 
+  pre {
+    overflow: auto;
+  }
 
   @include media-breakpoint-down(sm) {
     width: calc(100% - 1.2rem);
